header size changed

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>SQLインジェクション</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
@@ -12,23 +13,23 @@
         この脆弱性により、攻撃者は他のユーザーのデータを取得したり、アプリケーションデータの閲覧を可能とする。
       </p>
       
-      <h1>発生しうる脅威</h1>
+      <h2>発生しうる脅威</h2>
       <ul>
         <li>非公開情報の閲覧</li>
         <li>情報の改竄、消去</li>
         <li>認証回避による不正ログイン</li>
       </ul>
 
-      <h1>
+      <h2>
         SQLインジェクション手法
-      </h1>
+      </h2>
       <ul>
         <li>コメントアウト</li>
         <li><code>UNION</code></li>
         <li>ブラインドSQLインジェクション</li>
       </ul>
 
-      <h1>コメントアウト</h1>
+      <h2>コメントアウト</h2>
       <p>
         ショッピングサイトで商品をカテゴリ別に絞り込む機能を例に考えてみよう。
         商品のカテゴリを本にのみ絞り込む際に次のようなURLがリクエストされる。
@@ -87,11 +88,11 @@
       </p>
       <p><code>SELECT * FROM users WHERE username = 'administrator'--' AND password = ''</code></p>
       <p>
-        上記クエリはパスワードの確認を無効をせずにadministratorの情報を返し、administratorとして攻撃者はログイン出来ることになる。
+        上記クエリはパスワードの確認を無効をせずに<code>administrator</code>の情報を返し、<code>administrator</code>として攻撃者はログイン出来ることになる。
       </p>
     </div>
     <div class=union>
-      <h1>統合</h1>
+      <h2>統合</h2>
       <p>
         アプリケーションにSQLインジェクションの脆弱性があり、なおかつクエリの結果がアプリケーションに表示される場合、
         <code>UNION</code>を使用することによりデータベースの他のテーブルのデータを表示できる。
@@ -147,7 +148,7 @@
       </p>
     </div>
     <div class=blind>
-      <h1>ブラインドSQLインジェクション</h1>
+      <h2>ブラインドSQLインジェクション</h2>
       <p>
         ブラインドSQLインジェクションはアプリケーションがSQLインジェクションの脆弱性があるものの、
         HTTPレスポンスではクエリの結果やエラー表示されない場合の脆弱性のことを言う。
